<resources>
    <string name="app_name">Bookey</string>
    <string name="book_publisher">Casa editrice: %1$s</string>
    <string name="book_genre">Genere: %1$s</string>
    <string name="book_price">Prezzo: €%1$s</string>
    <string name="book_availability">Disponibilità: %1$d</string>
    <string name="book_added_to_personal_catalog">"%1$s" aggiunto al Catalogo Personale</string>

    <string name="book_already_in_personal_catalog">Il libro è già nel tuo catalogo personale.</string>


    <string name="welcome_logo_content_description">Logo Bookey</string>
    <string name="welcome_enter_action">Entra</string>

    <string name="auth_name_hint">Nome utente</string>
    <string name="auth_user_id_hint">UtenteId (solo registrazione)</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_login_title">Login</string>
    <string name="auth_login_subtitle">Inserisci email e password per accedere.</string>
    <string name="auth_register_title">Registrazione</string>
    <string name="auth_register_subtitle">Crea un account con nome, email e password.</string>
    <string name="auth_login_action">Accedi</string>
    <string name="auth_register_action">Registrati</string>
    <string name="auth_switch_to_register">Non hai un account? Registrati</string>
    <string name="auth_switch_to_login">Hai già un account? Login</string>

    <string name="auth_fill_email_password">Inserisci email e password.</string>
    <string name="auth_fill_registration_fields">Per registrarti inserisci UtenteId, email e password.</string>
    <string name="auth_register_user_id_prompt">Per registrarti inserisci anche UtenteId.</string>
    <string name="auth_user_exists">Utente già registrato: %1$s</string>
    <string name="auth_user_id_exists">UtenteId già registrato: %1$s</string>
    <string name="auth_register_success">Registrazione completata. Benvenuto %1$s!</string>
    <string name="auth_login_failed">Login non riuscito: credenziali non valide.</string>
    <string name="auth_login_success">Login effettuato. Ciao %1$s!</string>
    <string name="auth_generic_error">Si è verificato un errore interno. Riprova.</string>

    <string name="personal_catalog_title_list_header">I tuoi libri:</string>
    <string name="personal_catalog_user_required">Effettua il login per vedere o modificare il catalogo personale.</string>


    <string name="menu_welcome_message">Ciao %1$s!</string>
    <string name="menu_choose_section">Scegli cosa vuoi aprire:</string>
    <string name="menu_general_catalog">Catalogo Generale</string>
    <string name="menu_personal_catalog">Catalogo Personale</string>
    <string name="menu_map">Mappa</string>
    <string name="personal_catalog_empty">Il tuo catalogo personale è vuoto per ora.</string>

    <string name="location_request_action">Ottieni posizione dispositivo</string>
    <string name="location_default_message">Premi il pulsante per ottenere la posizione</string>
    <string name="location_permission_denied">Permesso posizione negato: impossibile ottenere la posizione.</string>
    <string name="location_not_available">Posizione non disponibile,riprova.</string>
    <string name="location_error">Errore recupero posizione: %1$s</string>
    <string name="location_coordinates">Lat: %.6f, Lng: %.6f</string>
</resources>
